Adicionado script do vite

--- a/Teste Alfa React/Teste_alfa_backend/package.json
+++ b/Teste Alfa React/Teste_alfa_backend/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "private": true,
   "devDependencies": {
@@ -12,5 +15,7 @@
   },
   "dependencies": {
     "@mui/x-data-grid": "^8.17.0"
-  }
+  },
+
+
 }
